tests/rosetta/out/C/canonicalize-cidr.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:58Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:58Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
typedef struct {
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
  int _;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int split(char *s, char *sep) {
  list_string tmp1 = {0, NULL};
  int parts = tmp1;
  const char *cur = "";
  int i = 0;
  while (i < strlen(s)) {
    if (strlen(sep) > 0 && i + strlen(sep) <= strlen(s) &&
        slice_string(s, i, i + strlen(sep)) == sep) {
      list_string tmp2 = list_string_create(1);
      tmp2.data[0] = cur;
      list_string tmp3 = concat_list_string(parts, tmp2);
      parts = tmp3;
      cur = "";
      i = i + strlen(sep);
    } else {
      char *tmp4 = slice_string(s, i, i + 1);
      char *tmp5 = concat_string(cur, tmp4);
      cur = tmp5;
      i = i + 1;
    }
  }
  list_string tmp6 = list_string_create(1);
  tmp6.data[0] = cur;
  list_string tmp7 = concat_list_string(parts, tmp6);
  parts = tmp7;
  return parts;
}

const char *join(list_string xs, char *sep) {
  const char *res = "";
  int i = 0;
  while (i < xs.len) {
    if (i > 0) {
      char *tmp8 = concat_string(res, sep);
      res = tmp8;
    }
    char *tmp9 = concat_string(res, xs.data[i]);
    res = tmp9;
    i = i + 1;
  }
  return res;
}

const char *repeat(char *ch, int n) {
  const char *out = "";
  int i = 0;
  while (i < n) {
    char *tmp10 = concat_string(out, ch);
    out = tmp10;
    i = i + 1;
  }
  return out;
}

int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp11 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp11 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int digits = (tmp_item_t){._ = 0,
                                       ._ = 1,
                                       ._ = 2,
                                       ._ = 3,
                                       ._ = 4,
                                       ._ = 5,
                                       ._ = 6,
                                       ._ = 7,
                                       ._ = 8,
                                       ._ = 9};
  while ((i < str.len)) {
    char *tmp12 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp12);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

const char *toBinary(int n, int bits) {
  const char *b = "";
  int val = n;
  int i = 0;
  while (i < bits) {
    char *tmp13 = _str(val % 2);
    char *tmp14 = concat_string(tmp13, b);
    b = tmp14;
    val = (int)((((double)val) / ((double)2)));
    i = i + 1;
  }
  return b;
}

int binToInt(char *bits) {
  int n = 0;
  int i = 0;
  while (i < strlen(bits)) {
    char *tmp15 = slice_string(bits, i, i + 1);
    n = n * 2 + parseIntStr(tmp15);
    i = i + 1;
  }
  return n;
}

const char *padRight(char *s, int width) {
  const char *out = s;
  while (strlen(out) < width) {
    char *tmp16 = concat_string(out, " ");
    out = tmp16;
  }
  return out;
}

const char *canonicalize(char *cidr) {
  int parts = split(cidr, "/");
  const char *dotted = parts.data[0];
  int size = parseIntStr(parts.data[1]);
  list_string tmp17 = {0, NULL};
  int binParts = tmp17;
  for (int tmp18 = 0; tmp18 < split(dotted, ".").len; tmp18++) {
    char *p = split(dotted, ".").data[tmp18];
    list_string tmp19 = list_string_create(1);
    tmp19.data[0] = toBinary(parseIntStr(p), 8);
    list_string tmp20 = concat_list_string(binParts, tmp19);
    binParts = tmp20;
  }
  const char *binary = join(binParts, "");
  char *tmp21 = slice_string(binary, 0, size);
  binary = tmp21 + repeat("0", 32 - size);
  list_string tmp22 = {0, NULL};
  int canonParts = tmp22;
  int i = 0;
  while (i < strlen(binary)) {
    char *tmp23 = slice_string(binary, i, i + 8);
    char *tmp24 = _str(binToInt(tmp23));
    list_string tmp25 = list_string_create(1);
    tmp25.data[0] = tmp24;
    list_string tmp26 = concat_list_string(canonParts, tmp25);
    canonParts = tmp26;
    i = i + 8;
  }
  return join(canonParts, ".") + "/" + parts.data[1];
}

int main() {
  list_string tests = list_string_create(6);
  tests.data[0] = "87.70.141.1/22";
  tests.data[1] = "36.18.154.103/12";
  tests.data[2] = "62.62.197.11/29";
  tests.data[3] = "67.137.119.181/4";
  tests.data[4] = "161.214.74.21/24";
  tests.data[5] = "184.232.176.184/18";
  int tests = tests;
  for (int tmp27 = 0; tmp27 < tests.len; tmp27++) {
    char *t = tests.data[tmp27];
    printf("%s\n", padRight(t, 18) + " -> " + canonicalize(t));
  }
  return 0;
}
